# apps/api/modules/trash/types.go
@@ -5,6 +5,8 @@ type TrashItem struct {
 	ID        int64  `json:"id"`
 	FacileID  string `json:"facile_id"`
 	Name      string `json:"name"`
+	MimeType  string `json:"mime_type,omitempty"`
+	Size      int64  `json:"size,omitempty"`
 	DeletedAt string `json:"deleted_at"`
 }
 
